# AutoScan

./: .gitignore  CLI_CONSENSUS_AND_FLEX_EXAMPLES.md  COMPLETE_TEST_SUITE_REPORT.md  CONSENSUS_AND_FLEX_RELEASE_NOTES.md  DEPENDENCY_FIX_REPORT.md  DEVELOPMENT_COMPLETE.md  DEVELOPMENT_LOG.md  Dockerfile  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MODULE8_DEPLOYMENT_RESULTS.md  MODULE8_FINAL_VALIDATION_RESULTS.md  PHASE_1_IMPLEMENTATION.md  PILOT_STUDY_README.md  PILOT_STUDY_RESULTS_ANALYSIS.md  QUICK_REFERENCE.md  README.md  RUNTIME_SETUP.md  TEST_REPORT_PHASE1.md  TEST_REPORT_PHASE1_FIXED.md  Test_Report_Phase_2.md  Test_Report_Test_3.md  VALIDATION_AND_TESTING.md  VALIDATION_CONTROLS_ANALYSIS.md  VALIDATION_CONTROLS_GUIDE.md  benchmark_result.txt  compare_results.py  display_results.py  docker-compose.yml  inspect_output.txt  phase_1_report.md  pilot_study_gyrase_selectivity.py  pyproject.toml  run_pilot_study_manual.sh  run_validation_controls.py  test.md  test_deps.py  test_fix.py  test_output.txt
.github/workflows/: ci.yml
config/: pockets.yaml
src/autodock/: __init__.py  main.py
src/autodock/core/: fetcher.py  prep.py
src/autodock/engine/: __init__.py  grid.py  scoring.py  vina.py
src/autodock/utils/: __init__.py  logger.py
src/autoscan/: __init__.py  __main__.py  main.py
src/autoscan/core/: __init__.py  fetcher.py  prep.py
src/autoscan/docking/: utils.py  vina.py
src/autoscan/dynamics/: MDAutomation_Report.md  (+2 more)
tests/: __init__.py  benchmark_control_final.py  benchmark_control_v2.py  benchmark_control_v3.py  benchmark_local.py  benchmark_phase1.py  benchmark_phase1_fixed.py  benchmark_suite.py  chemical_benchmark_enrichment.py  inspect_controls.py  inspect_pdbs.py  stress_test_pipeline.py  test_structural.py  validation_module8.py
tests/stress_data/: fake_structure.txt
tests/validation/: validate_thermodynamics.py
(+8 files in other folders)
